# Coco-Bot

./: .cspell.json  .dockerignore  .editorconfig  .gitignore  .jscpd.json  .mega-linter.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  coco-installer.sh  cog.toml  docker-compose.yml  sample.env
.devcontainer/: cocogitto-bootstrap.sh  devcontainer.json
.github/workflows/: build-image-and-push.yml  build-release-and-publish.yml  cocogitto.yml  mega-linter.yml
src/: main.rs
src/bot_lib/: meme_generator.rs  mod.rs
src/commands/: about.rs  advice.rs  age.rs  dad_joke.rs  fact.rs  fortune.rs  generate_meme.rs  let_me_google_that.rs  meme_generator.rs  mod.rs  pickup_line.rs  ping.rs  register.rs  say.rs  user_info.rs  xkcd.rs
src/events/: message.rs  mod.rs  ready.rs
