[package]
name = "coco-bot"
version = "0.1.0"
authors = ["MRDGH2821 <ask.mrdgh2821@outlook.com>"]
categories = ["Discord", "Bot", "Entertainment"]
edition = "2024"
exclude = [
    ".cspell.json",
    ".editorconfig",
    ".env",
    ".git",
    ".gitignore",
    ".trunk",
    ".vscode",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "target",
]
homepage = "https://github.com/MRDGH2821/Coco-Bot"
include = ["src"]
keywords = ["discord", "bot", "entertainment", "rust"]
license-file = "LICENSE"
publish = false
publish-lockfile = false
repository = "https://github.com/MRDGH2821/Coco-Bot"
readme = "README.md"
description = "Rust port of [KittyBot](https://github.com/olliequ/KittyBot) for the CS@unimelb Discord server. "

[package.metadata.scripts]
watch = "cargo watch -x run"
run = "cargo run"
build-release = "cargo build --release"
build = "cargo build"
test = "cargo test -- --nocapture"
clean = "cargo clean"
format = "cargo fmt --all -- --check"
lint = "cargo clippy -- -D warnings"

[dependencies]
dotenv = "0.15"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.140"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next" }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-subscriber = "0.3.19"
