[package]
name = "coco-bot"
version = "0.1.1"
authors = ["MRDGH2821 <ask.mrdgh2821@outlook.com>"]
categories = ["Discord", "Bot", "Entertainment"]
edition = "2024"
exclude = [
    ".cspell.json",
    ".devcontainer",
    ".editorconfig",
    ".env",
    ".git",
    ".github",
    ".gitignore",
    ".trunk",
    ".v8rignore",
    ".vscode",
    "LICENCE",
    "megalinter-reports",
    "README.md",
    "sample.env",
    "target",
]
homepage = "https://github.com/MRDGH2821/Coco-Bot"
include = ["src"]
keywords = ["discord", "bot", "entertainment", "rust"]
license-file = "LICENCE.txt"
publish = false
repository = "https://github.com/MRDGH2821/Coco-Bot"
readme = "README.md"
description = "Rust port of [KittyBot](https://github.com/olliequ/KittyBot) for the CS@unimelb Discord server. "

[package.metadata.scripts]
watch = "cargo watch -x run"
run = "cargo run"
build-release = "cargo build --release"
build = "cargo build"
test = "cargo test -- --nocapture"
clean = "cargo clean"
format = "cargo fmt --all -- --check"
lint = "cargo clippy -- -D warnings"
sort = "cargo sort"

[dependencies]
ab_glyph = "0.2.29"
dotenv = "0.15"
image = "0.25.6"
imageproc = "0.25.0"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
reqwest = { version = "0.12", features = ["json"] }
rusttype = "0.9.3"
serde_json = "1.0.140"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next" }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-subscriber = "0.3.19"
